Fix Epigraph spacing

--- a/Packages/Sites/Sfi.Sfi/Frontend/scss/Molecules/ContentBlocks/_Epigraph.scss
+++ b/Packages/Sites/Sfi.Sfi/Frontend/scss/Molecules/ContentBlocks/_Epigraph.scss
@@ -1,4 +1,5 @@
 .Epigraph {
+	margin: $spacingBetweenContentBlocks inherit;
 	@extend .Paragraph;
 	font-style: italic;
 	
